fix overflow

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@
      font-family: 'Montserrat', sans-serif;
      background-color: var(--color-cream);
      font-size: 0.875rem;
-     /* 14px */
  }
 
  main {
@@ -33,7 +32,7 @@
      width: 100vw;
      height: 100vh;
      padding: 12px;
-
+     overflow-x: hidden;
  }
 
  .card {
@@ -42,7 +41,6 @@
      flex-direction: column;
      border-radius: 7px;
      background-color: var(--color-white);
-
  }
 
  .card-image img {
@@ -112,7 +110,7 @@
  }
 
  .text-preset-2 {
-     font-size: 0.875rem; /* 14px */
+     font-size: 0.875rem;
      font-weight: 700;
      line-height: 110%;
      letter-spacing: 0;
@@ -128,7 +126,6 @@
  }
 
  .text-preset-4 {
-     /* 12px */
      font-size: 0.75rem;
      font-weight: 400;
      line-height: 120%;
@@ -152,7 +149,7 @@
      }
 
      .card>* {
-         max-width: 18.75rem;
+         width: 18.75rem;
      }
 
      .card-image img {
